# gputop

./: .travis.yml  configure.ac
gputop/: Makefile.am  gputop-main.c  gputop-perf.c  gputop-perf.h  gputop-server.c  gputop-ui.c  oa-bdw.xml  oa-gen.py
gputop/remote/: Makefile.am  gputop.js
gputop/remote/ajax/: metrics.html
gputop/web/: Makefile.am  Makefile.emscripten  Makefile.v2.emscripten  gputop-ui.js  gputop-web-v2.c
gputop/web2/: Gputop_ui.js  Makefile.am  index.html  package.json
gputop/web2/ajax/: metrics.html
gputop/web2/www/: Gputop.js  Gputop_ui.js
gputop/web2/www/ajax/: metrics.html
gputop/web2/www/css/: custom.css
web/: server.js
web/www/: Gputop.js  index.html  index_ascii.html
web/www/ajax/: Panel2.html  overview.html
web/www/css/: custom.css
